Rename suite splitter + refactor